# Expense-Management-System

./: .gitignore  README.md
EMS backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  test.db
EMS frontend/Web/: index.html  script.js  styles.css
