[tool.poetry]
name = "ems backend"
version = "0.1.0"
description = ""
authors = ["Kartikey gupta <kartikey071999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^1.4.0"
typing-extensions = ">=4.5.0,<5.0.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
